--- a/interface/src/App.css
+++ b/interface/src/App.css
@@ -1,7 +1,7 @@
 body {
   background-image: url(./images/bgImage.png);
-  width: 100vw;
   height: 100vh;
+  overflow: hidden;
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
